src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AP_Academic_Association__c</fullName>
        <label>AP Academic Association</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENCORE (Endovas/Coronary Revascul)</fullName>
                </value>
                <value>
                    <fullName>KO Association for Clinical Oncology</fullName>
                </value>
                <value>
                    <fullName>KO Cancer Study Group</fullName>
                </value>
                <value>
                    <fullName>Korea Cancer Association</fullName>
                </value>
                <value>
                    <fullName>Korean Association of Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Korean College Neuropsychopharmacology</fullName>
                </value>
                <value>
                    <fullName>Korean College Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Korean Diabetes Association</fullName>
                </value>
                <value>
                    <fullName>Korean NeuroPsychiatric Association</fullName>
                </value>
                <value>
                    <fullName>Korean Orthopaedic Association</fullName>
                </value>
                <value>
                    <fullName>Korean Urological Association</fullName>
                </value>
                <value>
                    <fullName>KO Society Depressive/Bipolar Disorders</fullName>
                </value>
                <value>
                    <fullName>KO Society for Schizophrenia Research</fullName>
                </value>
                <value>
                    <fullName>KO Society Men’s Health/Aging KSIC</fullName>
                </value>
                <value>
                    <fullName>KO Society Sexual Med &amp; Andrology</fullName>
                </value>
                <value>
                    <fullName>TCTAP (Transcatheter Asian Pacific)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_Society_Research_Group__c</fullName>
        <label>Academic Society/Research Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centers for Disease Control and Prevention (CDC)</fullName>
                </value>
                <value>
                    <fullName>U.S. Food and Drug Administration (FDA)</fullName>
                </value>
                <value>
                    <fullName>National Center for Health Services Research</fullName>
                </value>
                <value>
                    <fullName>National Institutes of Health (NIH)</fullName>
                </value>
                <value>
                    <fullName>United States Department of Health and Human Services</fullName>
                </value>
                <value>
                    <fullName>United States National Library of Medicine</fullName>
                </value>
                <value>
                    <fullName>American Society for Pharmacology and Experimental Therapeutics</fullName>
                </value>
                <value>
                    <fullName>JASDD</fullName>
                    <isActive>false</isActive>
                    <label>JASDD</label>
                </value>
                <value>
                    <fullName>JCA</fullName>
                    <isActive>false</isActive>
                    <label>JCA</label>
                </value>
                <value>
                    <fullName>JCOG</fullName>
                    <isActive>false</isActive>
                    <label>JCOG</label>
                </value>
                <value>
                    <fullName>JOCD</fullName>
                    <isActive>false</isActive>
                    <label>JOCD</label>
                </value>
                <value>
                    <fullName>JSBMR</fullName>
                    <isActive>false</isActive>
                    <label>JSBMR</label>
                </value>
                <value>
                    <fullName>JSCI</fullName>
                    <isActive>false</isActive>
                    <label>JSCI</label>
                </value>
                <value>
                    <fullName>JSCO</fullName>
                    <isActive>false</isActive>
                    <label>JSCO</label>
                </value>
                <value>
                    <fullName>JSCRRR</fullName>
                    <isActive>false</isActive>
                    <label>JSCRRR</label>
                </value>
                <value>
                    <fullName>JSIM</fullName>
                    <isActive>false</isActive>
                    <label>JSIM</label>
                </value>
                <value>
                    <fullName>JSMO</fullName>
                    <isActive>false</isActive>
                    <label>JSMO</label>
                </value>
                <value>
                    <fullName>JSPR</fullName>
                    <isActive>false</isActive>
                    <label>JSPR</label>
                </value>
                <value>
                    <fullName>JSSR</fullName>
                    <isActive>false</isActive>
                    <label>JSSR</label>
                </value>
                <value>
                    <fullName>Japan Diabetes Society</fullName>
                    <isActive>false</isActive>
                    <label>Japan Diabetes Society</label>
                </value>
                <value>
                    <fullName>Japan Epilepsy Society</fullName>
                    <isActive>false</isActive>
                    <label>Japan Epilepsy Society</label>
                </value>
                <value>
                    <fullName>Japan Osteoporosis Society</fullName>
                    <isActive>false</isActive>
                    <label>Japan Osteoporosis Society</label>
                </value>
                <value>
                    <fullName>Japanese Circulation Society</fullName>
                    <isActive>false</isActive>
                    <label>Japanese Circulation Society</label>
                </value>
                <value>
                    <fullName>Japanese Dermatological Association</fullName>
                    <isActive>false</isActive>
                    <label>Japanese Dermatological Association</label>
                </value>
                <value>
                    <fullName>Japanese Society for Medical History</fullName>
                    <isActive>false</isActive>
                    <label>Japanese Society for Medical History</label>
                </value>
                <value>
                    <fullName>Japanese Society of Anxiety Disorder</fullName>
                    <isActive>false</isActive>
                    <label>Japanese Society of Anxiety Disorder</label>
                </value>
                <value>
                    <fullName>Japanese Society of Mood Disorde</fullName>
                    <isActive>false</isActive>
                    <label>Japanese Society of Mood Disorde</label>
                </value>
                <value>
                    <fullName>Japanese Society of Sleep Research</fullName>
                    <isActive>false</isActive>
                    <label>Japanese Society of Sleep Research</label>
                </value>
                <value>
                    <fullName>Japanese Urological Association</fullName>
                    <isActive>false</isActive>
                    <label>Japanese Urological Association</label>
                </value>
                <value>
                    <fullName>Neuropenic Bladder Society</fullName>
                    <isActive>false</isActive>
                    <label>Neuropenic Bladder Society</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Function__c</fullName>
        <label>Contact Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Generics</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Language_s__c</fullName>
        <label>Language(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Geocode_Accuracy__c</fullName>
        <label>Mailing Geocode Accuracy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Location__c</fullName>
        <label>Mailing Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <label>Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Method__c</fullName>
        <label>Communication Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact to assistant</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone (mobile)</fullName>
                </value>
                <value>
                    <fullName>Phone (office)</fullName>
                </value>
                <value>
                    <fullName>In Person Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Meeting_Day__c</fullName>
        <label>Preferred Meeting Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday Morning</fullName>
                </value>
                <value>
                    <fullName>Monday Afternoon</fullName>
                </value>
                <value>
                    <fullName>Monday Evening</fullName>
                </value>
                <value>
                    <fullName>Tuesday Morning</fullName>
                </value>
                <value>
                    <fullName>Tuesday Afternoon</fullName>
                </value>
                <value>
                    <fullName>Tuesday Evening</fullName>
                </value>
                <value>
                    <fullName>Wednesday Morning</fullName>
                </value>
                <value>
                    <fullName>Wednesday Afternoon</fullName>
                </value>
                <value>
                    <fullName>Wednesday Evening</fullName>
                </value>
                <value>
                    <fullName>Thursday Morning</fullName>
                </value>
                <value>
                    <fullName>Thursday Afternoon</fullName>
                </value>
                <value>
                    <fullName>Thursday Evening</fullName>
                </value>
                <value>
                    <fullName>Friday Morning</fullName>
                </value>
                <value>
                    <fullName>Friday Afternoon</fullName>
                </value>
                <value>
                    <fullName>Friday Evening</fullName>
                </value>
                <value>
                    <fullName>Saturday Morning</fullName>
                </value>
                <value>
                    <fullName>Saturday Afternoon</fullName>
                </value>
                <value>
                    <fullName>Saturday Evening</fullName>
                </value>
                <value>
                    <fullName>Sunday Morning</fullName>
                </value>
                <value>
                    <fullName>Sunday Afternoon</fullName>
                </value>
                <value>
                    <fullName>Sunday Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Professional Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budgets</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Clinical Nurse Specialist</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Dietician</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager/Supervisor</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Pathologist</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Physician Assistant</fullName>
                </value>
                <value>
                    <fullName>Radiologist</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Contact Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Contact</fullName>
                </value>
                <value>
                    <fullName>Industry Meeting</fullName>
                </value>
                <value>
                    <fullName>Key Opinion Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Critical Care</fullName>
                </value>
                <value>
                    <fullName>Dementia</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Family Practice</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Microbiology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Orthopedic Surgery</fullName>
                </value>
                <value>
                    <fullName>Osteology</fullName>
                </value>
                <value>
                    <fullName>Pain Management</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Pulmonology</fullName>
                </value>
                <value>
                    <fullName>Respiratory Therapy</fullName>
                </value>
                <value>
                    <fullName>Rheumatoid Arthritis</fullName>
                </value>
                <value>
                    <fullName>Sleep Disorders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <label>Therapeutic Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autoimmune Diseases</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Critical Care</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Osteoporosis</fullName>
                </value>
                <value>
                    <fullName>Psychiatry &amp; Pain</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Non-Therapeutic Area Specific</fullName>
                </value>
                <value>
                    <fullName>Pain</fullName>
                    <isActive>false</isActive>
                    <label>Pain</label>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                    <isActive>false</isActive>
                    <label>Pediatrics</label>
                </value>
                <value>
                    <fullName>Women&apos;s Health</fullName>
                    <isActive>false</isActive>
                    <label>Women&apos;s Health</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Assoc. Prof</fullName>
                </value>
                <value>
                    <fullName>Asst. Prof</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>